--- a/content/blog/references.bib
+++ b/content/blog/references.bib
@@ -1,4 +1,20 @@
 
+@article{abramo2014,
+  langid = {english},
+  title = {The Spin-off of Elite Universities in Non-Competitive, Undifferentiated Higher Education Systems: An Empirical Simulation in {{Italy}}},
+  volume = {39},
+  issn = {0307-5079, 1470-174X},
+  url = {http://www.tandfonline.com/doi/abs/10.1080/03075079.2013.801426},
+  doi = {10.1080/03075079.2013.801426},
+  shorttitle = {The Spin-off of Elite Universities in Non-Competitive, Undifferentiated Higher Education Systems},
+  number = {7},
+  journaltitle = {Studies in Higher Education},
+  urldate = {2015-06-22},
+  date = {2014-08-09},
+  pages = {1270--1289},
+  author = {Abramo, Giovanni and D'Angelo, Ciriaco Andrea}
+}
+
 @report{wilshaw2015,
   langid = {english},
   location = {{London}},
@@ -136,6 +152,15 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@article{odell2018,
+  title = {Hansard {{Speeches}} and {{Sentiment V2}}.5.0 [Dataset]},
+  url = {https://evanodell.com/projects/datasets/hansard-data/},
+  doi = {10.5281/zenodo.1183893},
+  date = {2018-02-24},
+  keywords = {dataset},
+  author = {Odell, Evan}
+}
+
 @unpublished{fong2015,
   title = {Covariate {{Balancing Propensity Score}} for {{General Treatment Regimes}}},
   url = {http://imai.princeton.edu/research/files/CBGPS.pdf},
@@ -256,6 +281,30 @@
   doi = {10.15127/1.293723},
   date = {2017},
   author = {Fieldhouse, Edward and Green, Jane and Evans, Geoffrey and Schmitt, Hermann and Eijk, Cees Van Der and Mellon, Jon and Prosser, Chris}
+}
+
+@report{rae2017,
+  location = {{Sheffield}},
+  title = {A {{Land Cover Atlas}} of the {{United Kingdom}} ({{Document}})},
+  abstract = {This Atlas accompanies a much larger set of maps, published simultaneously here on Figshare. In the map set, there is one map for each local authority in the United Kingdom.\\
+This report provides an introduction to the project, explains what Corine data is and provides an overview of land cover in the United Kingdom. It also looks a little more closely at land cover in England, Northern Ireland, Scotland and Wales.\\
+It includes some local maps of land cover plus two Appendices. Appendix 1 provides further details on the Corine Land Cover 2012 classification used herein and Appendix 2 provides some further supplementary data tables. \\
+Overall, the UK is nearly 29\% pasture land and just over 27\% non-irrigated arable land. In terms of land cover, the UK is less than 6\% urban. See this report and the associated maps for more detail.\\
+Full set of maps: https://doi.org/10.15131/shef.data.5219956},
+  institution = {{Figshare}},
+  date = {2017},
+  pages = {--},
+  author = {Rae, Alasdair},
+  doi = {10.15131/shef.data.5266495.v1}
+}
+
+@inproceedings{cambria2016,
+  title = {{{SenticNet}} 4: {{A}} Semantic Resource for Sentiment Analysis Based on Conceptual Primitives},
+  url = {http://sentic.net/senticnet-4.pdf},
+  eventtitle = {Proceedings of {{COLING}} 2016, the 26th {{International Conference}} on {{Computational Linguistics}}: {{Technical Papers}}},
+  date = {2016},
+  pages = {2666--2677},
+  author = {Cambria, Erik and Poria, Soujanya and Bajpai, Rajiv and Schuller, Bj{\"o}rn}
 }
 
 
