--- a/content/projects/datasets/hansard-data/references.bib
+++ b/content/projects/datasets/hansard-data/references.bib
@@ -1,4 +1,20 @@
 
+@article{abramo2014,
+  langid = {english},
+  title = {The Spin-off of Elite Universities in Non-Competitive, Undifferentiated Higher Education Systems: An Empirical Simulation in {{Italy}}},
+  volume = {39},
+  issn = {0307-5079, 1470-174X},
+  url = {http://www.tandfonline.com/doi/abs/10.1080/03075079.2013.801426},
+  doi = {10.1080/03075079.2013.801426},
+  shorttitle = {The Spin-off of Elite Universities in Non-Competitive, Undifferentiated Higher Education Systems},
+  number = {7},
+  journaltitle = {Studies in Higher Education},
+  urldate = {2015-06-22},
+  date = {2014-08-09},
+  pages = {1270--1289},
+  author = {Abramo, Giovanni and D'Angelo, Ciriaco Andrea}
+}
+
 @report{wilshaw2015,
   langid = {english},
   location = {{London}},
@@ -134,6 +150,15 @@
   author = {Nielsen, Finn \AA{}rup},
   biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1103-2903},
   bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{odell2018,
+  title = {Hansard {{Speeches}} and {{Sentiment V2}}.5.0 [Dataset]},
+  url = {https://evanodell.com/projects/datasets/hansard-data/},
+  doi = {10.5281/zenodo.1183893},
+  date = {2018-02-24},
+  keywords = {dataset},
+  author = {Odell, Evan}
 }
 
 @unpublished{fong2015,
@@ -275,6 +300,7 @@ Full set of maps: https://doi.org/10.15131/shef.data.5219956},
 
 @inproceedings{cambria2016,
   title = {{{SenticNet}} 4: {{A}} Semantic Resource for Sentiment Analysis Based on Conceptual Primitives},
+  url = {http://sentic.net/senticnet-4.pdf},
   eventtitle = {Proceedings of {{COLING}} 2016, the 26th {{International Conference}} on {{Computational Linguistics}}: {{Technical Papers}}},
   date = {2016},
   pages = {2666--2677},
