--- a/content/blog/references.bib
+++ b/content/blog/references.bib
@@ -1,20 +1,4 @@
 
-@article{abramo2014,
-  langid = {english},
-  title = {The Spin-off of Elite Universities in Non-Competitive, Undifferentiated Higher Education Systems: An Empirical Simulation in {{Italy}}},
-  volume = {39},
-  issn = {0307-5079, 1470-174X},
-  url = {http://www.tandfonline.com/doi/abs/10.1080/03075079.2013.801426},
-  doi = {10.1080/03075079.2013.801426},
-  shorttitle = {The Spin-off of Elite Universities in Non-Competitive, Undifferentiated Higher Education Systems},
-  number = {7},
-  journaltitle = {Studies in Higher Education},
-  urldate = {2015-06-22},
-  date = {2014-08-09},
-  pages = {1270--1289},
-  author = {Abramo, Giovanni and D'Angelo, Ciriaco Andrea}
-}
-
 @report{wilshaw2015,
   langid = {english},
   location = {{London}},
@@ -200,6 +184,7 @@
   title = {Measuring {{Emotion}} in {{Parliamentary Debates}} with {{Automated Textual Analysis}}},
   volume = {11},
   url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0168843},
+  doi = {10.1371/journal.pone.0168843},
   number = {12},
   journaltitle = {PLOS ONE},
   urldate = {2017-06-25},
@@ -305,6 +290,15 @@ Full set of maps: https://doi.org/10.15131/shef.data.5219956},
   date = {2016},
   pages = {2666--2677},
   author = {Cambria, Erik and Poria, Soujanya and Bajpai, Rajiv and Schuller, Bj{\"o}rn}
+}
+
+@report{worldhealthorganization2017,
+  location = {{Copenhagen}},
+  title = {Urban Green Space Interventions and Health: {{A}} Review of Impacts and Effectiveness},
+  url = {http://www.euro.who.int/__data/assets/pdf_file/0010/337690/FULL-REPORT-for-LLP.pdf},
+  institution = {{World Health Organization}},
+  date = {2017},
+  author = {{World Health Organization}}
 }
 
 
