--- a/content/blog/2018-02-28-golf.Rmd
+++ b/content/blog/2018-02-28-golf.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Golf and train stations"
 author: "Evan Odell"
-date: '2018-02-28'
+publishdate: 2018-02-28
 bibliography: [golf.bib]
 link-citations: true
 output:
@@ -27,12 +27,11 @@ Overall, there is some 191,085,035 m^2^ of golf course land within 2km of a trai
 If we lower the radius to 1km, there is still 41,212,837 m^2^ (10,184 acres, 4,121.3 hectares) of golf course within a single kilometre of a train station, enough space to build 123,639 low density suburban houses, or 329,704 higher density houses. Certainly not enough to solve the UK's housing issues, but it could still make a big difference.
 
 ```{r needed-packages, echo=FALSE, message=FALSE, warning=FALSE}
-library(sf)
-library(rgdal)
-library(sp)
+#library(sf)
+#library(rgdal)
+#library(sp)
 library(dplyr)
 library(readr)
-library(readxl)
 library(leaflet)
 library(ggplot2)
 ```
@@ -61,7 +60,7 @@ golf_map <- st_intersection(golf_map, ugcbe$geometry)
 readr::write_rds(golf_map, "golf_map.rds")
 ```
 
-```{r stations, echo=FALSE, message=FALSE, warning=FALSE}
+```{r stations, echo=FALSE, message=FALSE, warning=FALSE, eval=FALSE}
 
 uk_stations <- read_csv("UK stations.csv")
 
@@ -85,7 +84,7 @@ stn_circles_1000 <- st_buffer(stns_sf, dist = 1000)
 
 ```
 
-```{r small-stns-circles, message=FALSE, warning=FALSE, include=FALSE}
+```{r small-stns-circles, message=FALSE, warning=FALSE, include=FALSE, eval=FALSE}
 
 golf_map <- read_rds("golf_map.rds")
 
@@ -111,7 +110,7 @@ sum(stn_circles2$area)
 
 The following map highlights in bright pink all golf course land within 2km of a train station. If the radius of two or more train stations overlaps, the train station with more passengers takes precedence, to avoid double counting of space.[^1] You can see a full screen version [here](maps/golf-map.html).
 
-```{r summary_and_map, echo=FALSE, message=FALSE, warning=FALSE}
+```{r summary_and_map, echo=FALSE, message=FALSE, warning=FALSE, eval=FALSE}
 
 golf_map <- read_rds("golf_map.rds")
 
@@ -132,6 +131,14 @@ golf_ints_summary <- golf_ints_summary[order(-golf_ints_summary$trips_2017),]
  golf_ints_summary <- golf_ints_summary %>% 
    st_transform(4326) %>%
    st_difference()
+ 
+  write_rds(golf_ints_summary, "golf_ints_summary.rds")
+```
+
+
+```{r map, echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
+
+golf_ints_summary <- read_rds("golf_ints_summary.rds")
 
 area_labels <- paste0(
   "<strong>Station: </strong>", golf_ints_summary$Station, "</br>",
@@ -170,7 +177,7 @@ golf_map
 
 This chart shows the ten stations with the greatest percentage of their surrounding area devoted to golf. These percentages are of all surface area, including the stations themselves, waterways, roads, etc. The actual percentage of _usuable_ land devoted to golf is therefore at least slightly higher in all instances.
 
-```{r top_ten, echo=FALSE, message=FALSE, warning=FALSE}
+```{r top_ten, echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
   p1 <- ggplot(aes(y=golf_percent, x=factor(Station, 
                                                 levels = c("Longcross",
                                                            "Sunningdale", 
@@ -196,7 +203,7 @@ This chart shows the ten stations with the greatest percentage of their surround
 
 None of these stations have particularly high passenger volumes, with only West Byfleet and Elmstead Woods having more than a million passengers in 2016--17. Longcross, where the surrounding area is more than a quarter golf course, had less than 15,000 passengers last year and has no evening or weekend service.
 
-```{r area_passengers, echo=FALSE, message=FALSE, warning=FALSE}
+```{r area_passengers, echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
 
 select <- c("Maidenhead",
             "Richmond",
