--- a/content/cv/_index.Rmd
+++ b/content/cv/_index.Rmd
@@ -98,9 +98,11 @@ image: /img/EvanOdell.jpg
   <div class="cvsidebar">2017</div>
     <div class="cvcontent"><p><strong>Odell, E.</strong> <code>parlitools</code>: Tools for Analysing UK Politics. <a href="http://docs.evanodell.com/parlitools">http://docs.evanodell.com/parlitools</a> DOI: <a href="https://dx.doi.org/10.5281/zenodo.591586">10.5281/zenodo.591586</a> <a href="https://cran.r-project.org/package=parlitools"><img src="https://www.r-pkg.org/badges/version/parlitools" alt="CRAN_Status_Badge" /></a></p></div>
   <div class="cvcleared"></div>
+  
   <div class="cvsidebar">2017</div>
     <div class="cvcontent"><p><strong>Odell, E.</strong> <code>mnis</code>: Easy Downloading Capabilities for the Members’ Name Information Service. <a href="http://docs.evanodell.com/mnis">http://docs.evanodell.com/mnis</a> DOI: <a href="https://dx.doi.org/10.5281/zenodo.591287">10.5281/zenodo.591287</a> <a href="https://cran.r-project.org/package=mnis"><img src="https://www.r-pkg.org/badges/version/mnis" alt="CRAN_Status_Badge" /></a></p></div>
   <div class="cvcleared"></div>
+  
   <div class="cvsidebar">2016</div>
     <div class="cvcontent"><p><strong>Odell, E.</strong> <code>hansard</code>: Accessing Westminster Parliament Data. <a href="http://docs.evanodell.com/hansard">http://docs.evanodell.com/hansard</a> DOI: <a href="https://dx.doi.org/10.5281/zenodo.591264">10.5281/zenodo.591264</a> <a href="https://cran.r-project.org/package=hansard"><img src="https://www.r-pkg.org/badges/version/hansard" alt="CRAN_Status_Badge" /></a></p></div>
   <div class="cvcleared"></div>
@@ -127,26 +129,25 @@ image: /img/EvanOdell.jpg
 
 ### Speaking Appearances
 
+  <div class="cvsidebar">2017</div>
+    <div class="cvcontent"><p>Panel appearance with Melanie Wilkes and Andrew Rawson. <em>From Application to Graduation.</em> Policy UK Forum: Creating a Culture of Inclusivity for Disabled Students. London.</p></div>
+  <div class="cvcleared"></div>
+
 <div class="cvwrapper">
   <div class="cvsidebar">2017</div>
     <div class="cvcontent"><p>Guest Lecturer on the <em>Interdisciplinary Studies in Global Health and Disability</em> programme. Bader International Study Centre, Queen's University (Canada). London.</p></div>
   <div class="cvcleared"></div>
+  
   <div class="cvsidebar">2017</div>
     <div class="cvcontent"><p>Panel appearance. <em>What is the EU and should we be against it?</em> University of Chicago. Chicago.</p></div>
   <div class="cvcleared"></div>
+  
   <div class="cvsidebar">2017</div>
-    <div class="cvcontent"><p>Panel appearance with Joanne Cooke and Graeme Atherton, moderated by Lisa Cameron. 2017. <em>Priorities for Increasing Disabled Student Participation in Higher Education.</em> Westminster Higher Education Forum Keynote Seminar: Disabled students at university - facilities, support services and the impact of funding changes. London.</p></div>
+    <div class="cvcontent"><p>Panel appearance with Joanne Cooke and Graeme Atherton, moderated by Lisa Cameron.<em>Priorities for Increasing Disabled Student Participation in Higher Education.</em> Westminster Higher Education Forum Keynote Seminar: Disabled students at university - facilities, support services and the impact of funding changes. London.</p></div>
   <div class="cvcleared"></div>
+  
   <div class="cvsidebar">2016</div>
-    <div class="cvcontent"><p>Panel appearance with Chris Holmes, Huma Munshi and Natasha Hirst, moderated by Debbie Foster. 2016. <em>The Role of Worker Representatives and Disability Advocacy Organisations in Supporting Disabled Employees into the Labour Market and in Employment and Improving Workplace Well-Being.</em> Closing Disability Gaps at Work. London.</p></div>
+    <div class="cvcontent"><p>Panel appearance with Chris Holmes, Huma Munshi and Natasha Hirst, moderated by Debbie Foster. <em>The Role of Worker Representatives and Disability Advocacy Organisations in Supporting Disabled Employees into the Labour Market and in Employment and Improving Workplace Well-Being.</em> Closing Disability Gaps at Work. London.</p></div>
   <div class="cvcleared"></div>
 </div>
 
-<!--
-## ONGOING PROJECTS
-
-### Disability and Vulnerability
-
-### Young Peoples Attitudes to Disability
-
--->
