--- a/content/blog/2018-02-28-golf.Rmd
+++ b/content/blog/2018-02-28-golf.Rmd
@@ -136,7 +136,7 @@ golf_ints_summary <- golf_ints_summary[order(-golf_ints_summary$trips_2017),]
 ```
 
 
-```{r map, echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
+```{r map, echo=FALSE, message=FALSE, warning=FALSE}
 
 golf_ints_summary <- read_rds("golf_ints_summary.rds")
 
@@ -177,7 +177,7 @@ golf_map
 
 This chart shows the ten stations with the greatest percentage of their surrounding area devoted to golf. These percentages are of all surface area, including the stations themselves, waterways, roads, etc. The actual percentage of _usuable_ land devoted to golf is therefore at least slightly higher in all instances.
 
-```{r top_ten, echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
+```{r top_ten, echo=FALSE, message=FALSE, warning=FALSE}
   p1 <- ggplot(aes(y=golf_percent, x=factor(Station, 
                                                 levels = c("Longcross",
                                                            "Sunningdale", 
@@ -203,7 +203,7 @@ This chart shows the ten stations with the greatest percentage of their surround
 
 None of these stations have particularly high passenger volumes, with only West Byfleet and Elmstead Woods having more than a million passengers in 2016--17. Longcross, where the surrounding area is more than a quarter golf course, had less than 15,000 passengers last year and has no evening or weekend service.
 
-```{r area_passengers, echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
+```{r area_passengers, echo=FALSE, message=FALSE, warning=FALSE}
 
 select <- c("Maidenhead",
             "Richmond",
