coffee and freedom blog

--- a/content/blog/references.bib
+++ b/content/blog/references.bib
@@ -301,4 +301,48 @@ Full set of maps: https://doi.org/10.15131/shef.data.5219956},
   author = {{World Health Organization}}
 }
 
+@report{kohl2016,
+  location = {{Madrid}},
+  title = {World {{Index}} of {{Moral Freedom}} 2016},
+  url = {http://www.fundalib.org/wp-content/uploads/2016/04/World-Index-of-Moral-Freedom-web.pdf},
+  institution = {{Foundation for the Advancement of Liberty}},
+  date = {2016},
+  author = {Kohl, Andreas and Pina, Juan}
+}
+
+@report{economistintelligenceunit2017,
+  location = {{London}},
+  title = {Democracy {{Index}} 2017: {{Free Speech Under Attack}}},
+  url = {http://pages.eiu.com/rs/753-RIQ-438/images/Democracy_Index_2017.pdf},
+  institution = {{Economist Intelligence Unit}},
+  date = {2017},
+  author = {{Economist Intelligence Unit}}
+}
+
+@report{reporterswithoutborders2017,
+  location = {{Paris}},
+  title = {2017 {{World Press Freedom Index}}},
+  url = {https://rsf.org/en/world-press-freedom-index},
+  institution = {{Reporters without Borders}},
+  date = {2017},
+  author = {{Reporters without Borders}}
+}
+
+@report{freedomhouse2018,
+  location = {{Washington, DC}},
+  title = {Freedom in the {{World}} 2018: {{Democracy}} in {{Crisis}}},
+  url = {https://freedomhouse.org/report/freedom-world/freedom-world-2018},
+  institution = {{Freedom House}},
+  date = {2018},
+  author = {{Freedom House}}
+}
+
+@report{marshall2017,
+  location = {{Vienna, Virginia}},
+  title = {Polity {{IV Annual Time}}-{{Series}}, 1800-2016},
+  institution = {{Center for Systemic Peace}},
+  date = {2017},
+  author = {Marshall, Monty G and Gurr, Ted Robert and Jaggers, Keith}
+}
+
 
