--- a/content/blog/2018-03-28-ontario.md
+++ b/content/blog/2018-03-28-ontario.md
@@ -3,7 +3,7 @@ title: "The Onterrible politics of the NDP"
 date: 2018-03-28
 ---
 
-I'm back in Ontario (and Canada) for the first time in roughly 3.5 years to find the province in the midst of a pre-election phony war. The election isn't until 7 June, and the official election period hasn't even started yet, but the campaign has already started to get underway, particularly as the party most likely to win the election -- the Progressive Conservatives -- have just elected a new leader when their old leader [resigned after a series of allegations of sexual misconduct](https://www.ctvnews.ca/politics/patrick-brown-denies-sexual-misconduct-allegations-from-two-women-resigns-as-ontario-pc-leader-1.3774686). Their new leader is Doug Ford, elder brother of the late Rob Ford, who achieved international fame for smoking crack while in office (and possibly [in city hall](https://twitter.com/goldsbie/status/452664840612376577)), and whose term as mayor was rhetorically right-wing but largely ineffective. Doug Ford is cut from the same cloth as his brother -- an angry, childish and blustery suburbanite who won the leadership election by his fingernails on the back of support from conservative parents opposed to a provincial sex education curriculum [updated for the 21st century](http://www.cbc.ca/news/canada/toronto/ontario-sex-ed-curriculum-5-things-to-know-1.3059951).
+I'm back in Ontario (and Canada) for the first time in roughly 3.5 years to find the province in the midst of a pre-election phony war. The election isn't until 7 June, and the official election period hasn't even started yet, but the campaign has already started to get underway, particularly as the party most likely to win the election -- the Progressive Conservatives -- have just elected a new leader when their old leader [resigned after a series of allegations of sexual misconduct](https://www.ctvnews.ca/politics/patrick-brown-denies-sexual-misconduct-allegations-from-two-women-resigns-as-ontario-pc-leader-1.3774686). Their new leader is Doug Ford, elder brother of the late Rob Ford, who achieved international fame for smoking crack while in office (and possibly [in city hall](https://twitter.com/goldsbie/status/452664840612376577)), and whose term as mayor was rhetorically right-wing but largely ineffective. Doug Ford is cut from the same cloth as his brother -- an angry, childish and blustery suburbanite who won the party leadership election by his fingernails on the back of support from conservative parents opposed to a provincial sex education curriculum [updated for the 21st century](http://www.cbc.ca/news/canada/toronto/ontario-sex-ed-curriculum-5-things-to-know-1.3059951).
 
 However, I'm not interested in talking about Doug Ford. Rather, I want to talk about Ontario's third party, the New Democratic Party (NDP), a social-democratic party currently with 18 seats in the provincial legislature. Their leader, Andrea Horwath, has held the party leadership since 2009, but has seemed to be mostly harmless and lacking in any kind of big vision, with the NDP failing to do anything notable despite holding the balance of power in the 2011--2014 legislature. The party has run dull campaigns that are just slightly to the left of the governing Liberal party's, and doesn't differentiate itself from the status quo in any meaningful way. They have struggled to get media attention (in part because they are so dull they rarely work well on TV), and have failed to overcome negative memories of the Bob Rae government of 1990--1995, even though no one under the age of 40 would have even been able to vote in the 1995 election that saw the NDP slip to third, a position from which they have yet to recover. The party's response to these challenges has been to win about 20 seats in each of the past few elections, then sit in the legislature and sulk. Classic Canadian socialists[^1] in that regards, just happy to be there.
 
