--- a/content/blog/references.bib
+++ b/content/blog/references.bib
@@ -34,7 +34,7 @@
   journaltitle = {Policy Studies},
   urldate = {2015-01-12},
   date = {2006-06},
-  pages = {153--171},
+  pages = {153-171},
   keywords = {Education Policy Option},
   author = {Wilson, Deborah and Croxson, Bronwyn and Atkinson, Adele}
 }
@@ -45,7 +45,7 @@
   shorttitle = {{{SentiWordNet}} 3.0},
   booktitle = {{{LREC}}},
   date = {2010},
-  pages = {2200--2204},
+  pages = {2200-2204},
   author = {Baccianella, Stefano and Esuli, Andrea and Sebastiani, Fabrizio}
 }
 
@@ -56,7 +56,7 @@
   publisher = {{ACM}},
   urldate = {2017-01-16},
   date = {2004},
-  pages = {168--177},
+  pages = {168-177},
   author = {Hu, Minqing and Liu, Bing}
 }
 
@@ -71,7 +71,7 @@
   journaltitle = {Journal of the Royal Society of Medicine},
   urldate = {2017-01-16},
   date = {2014-12},
-  pages = {483--489},
+  pages = {483-489},
   author = {Ahmad, Naseer and Thomas, G Neil and Gill, Paramjit and Chan, Colin and Torella, Francesco},
   langid = {english}
 }
@@ -84,7 +84,7 @@
   publisher = {{ACM}},
   urldate = {2017-01-16},
   date = {2005},
-  pages = {342--351},
+  pages = {342-351},
   author = {Liu, Bing and Hu, Minqing and Cheng, Junsheng}
 }
 
@@ -96,7 +96,7 @@
   journaltitle = {Computational Intelligence},
   urldate = {2017-01-16},
   date = {2013},
-  pages = {436--465},
+  pages = {436-465},
   author = {Mohammad, Saif M. and Turney, Peter D.}
 }
 
@@ -163,7 +163,7 @@
   journaltitle = {Educational Research},
   shortjournal = {Educational Research},
   date = {2017},
-  pages = {257--272},
+  pages = {257-272},
   keywords = {peerReview},
   author = {Odell, Evan}
 }
@@ -205,7 +205,7 @@
   journaltitle = {Disability \& Society},
   urldate = {2017-07-04},
   date = {2011-05},
-  pages = {351--364},
+  pages = {351-364},
   author = {Roulstone, Alan and Thomas, Pam and Balderston, Susie}
 }
 
@@ -242,7 +242,7 @@
   journaltitle = {Proceedings of the National Academy of Sciences},
   urldate = {2017-10-02},
   date = {2017-08-22},
-  pages = {E7150--E7158},
+  pages = {E7150-E7158},
   author = {Montoya, Jose G. and Holmes, Tyson H. and Anderson, Jill N. and Maecker, Holden T. and Rosenberg-Hasson, Yael and Valencia, Ian J. and Chu, Lily and Younger, Jarred W. and Tato, Cristina M. and Davis, Mark M.}
 }
 
@@ -278,7 +278,7 @@ Overall, the UK is nearly 29\% pasture land and just over 27\% non-irrigated ara
 Full set of maps: https://doi.org/10.15131/shef.data.5219956},
   institution = {{Figshare}},
   date = {2017},
-  pages = {--},
+  pages = {-},
   author = {Rae, Alasdair},
   doi = {10.15131/shef.data.5266495.v1}
 }
@@ -288,7 +288,7 @@ Full set of maps: https://doi.org/10.15131/shef.data.5219956},
   url = {http://sentic.net/senticnet-4.pdf},
   eventtitle = {Proceedings of {{COLING}} 2016, the 26th {{International Conference}} on {{Computational Linguistics}}: {{Technical Papers}}},
   date = {2016},
-  pages = {2666--2677},
+  pages = {2666-2677},
   author = {Cambria, Erik and Poria, Soujanya and Bajpai, Rajiv and Schuller, Bj{\"o}rn}
 }
 
